--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ utils/__pycache__/mean_calc.cpython-37.pyc
 utils/__pycache__/net_utils.cpython-37.pyc
 utils/__pycache__/thordata_utils.cpython-37.pyc
 utils/__pycache__/vnenv_args.cpython-37.pyc
+testers/__pycache__/__init__.cpython-37.pyc
+testers/__pycache__/a3c_tester.cpython-37.pyc
