--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 */__pycache__/*
 result_demo.json
 __pycache__/*
+*/*/__pycache__/*
 test_torch.py
 test_vision.py
 env_test.py
 test_vec_env.py
 speed_test.py
 *.json
+test.py
